WIP(react-components): fix rating facet having incorrect layout on mobile
affects: @findify/react-components

--- a/packages/react-components/src/components/search/MobileFacets/styles.css
+++ b/packages/react-components/src/components/search/MobileFacets/styles.css
@@ -78,6 +78,10 @@
   overflow-y: auto;
 }
 
+.rating {
+  flex-direction: column;
+}
+
 .expand{
   display: none
 }
